--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <h1>Hori<strong class="seo">seo</strong>n</h1>
+        <h1>Hori<bold class="seo">seo</bold>n</h1>
         <nav>
             <ul>
                 <li>
@@ -48,29 +48,29 @@
             </p>
         </nav>
     </section>
-    <section class="benefits">
-        <article class="benefit-lead">
+    <article class="benefits">
+        <aside class="benefit-lead">
          <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Image placeholder for lead generation content of the benefits section of this page" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </article>
-        <article class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
            <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Image placeholder for brand awareness content of the benefits section of this page" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </article>
-        <article class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Image placeholder for cost management content of the benefits section of this page" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </article>
-    </section>
+        </aside>
+    </article>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
