--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <img class="hero">
+    <div class="hero"></div>
     <section class="content">
         <nav class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image asset for SEO section of page" class="float-left" />
