--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
-    <section class="content">
+    <section class="hero"></section>
+    <article class="content">
         <nav class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image asset for SEO section of page" class="float-left" />
         <h2>Search Engine Optimization</h2>
@@ -47,7 +47,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </nav>
-    </section>
+    </article>
     <article class="benefits">
         <aside class="benefit-lead">
          <h3>Lead Generation</h3>
